[gd_scene load_steps=33 format=2]

[ext_resource path="res://Sprites/Pixel Art Platformer - Village Props v2.1.0/Texture/TX Tileset Ground.png" type="Texture" id=1]
[ext_resource path="res://Sprites/pixel_Advnture_Sprites/Free/Main Characters/Ninja Frog/Run (32x32).png" type="Texture" id=2]
[ext_resource path="res://Sprites/pixel_Advnture_Sprites/Free/Main Characters/Ninja Frog/Idle (32x32).png" type="Texture" id=3]
[ext_resource path="res://Sprites/whitelight.png" type="Texture" id=4]
[ext_resource path="res://Shaders/frog_head_band.gdshader" type="Shader" id=5]
[ext_resource path="res://Sprites/snoops_bows_and_guns/0px All.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Ninja_frog.gd" type="Script" id=7]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=1]
resource_local_to_scene = true
0/name = "TX Tileset Ground.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 192, 96, 32, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "TX Tileset Ground.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 512, 512 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 8 ), 144, Vector2( 0, 9 ), 146, Vector2( 0, 10 ), 18, Vector2( 0, 12 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 12 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 12 ), 24, Vector2( 4, 0 ), 432, Vector2( 4, 1 ), 54, Vector2( 5, 0 ), 216, Vector2( 5, 1 ), 27, Vector2( 10, 13 ), 186, Vector2( 10, 15 ), 58 ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="ShaderMaterial" id=18]
render_priority = 1
shader = ExtResource( 5 )
shader_param/RED1 = Color( 0.8, 0.188235, 0.282353, 1 )
shader_param/RED2 = Color( 0.611765, 0.105882, 0.301961, 1 )
shader_param/RED3 = Color( 0.894118, 0.290196, 0.290196, 1 )
shader_param/BLUE1 = Color( 0.992157, 1, 0, 1 )
shader_param/BLUE2 = Color( 0.537255, 0.541176, 0.0431373, 1 )
shader_param/BLUE3 = Color( 1, 0.988235, 0.313726, 1 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 24.5, 26.7349 )

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("collision_base:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("collision_base:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.55701, 2.09601 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("collision_base:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "idle"

[sub_resource type="Animation" id=22]
resource_name = "idlea"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collision_base:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collision_base:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.05701, 7.59601 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "run"
length = 1.002
loop = true
step = 0.074
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collision_base:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0791636, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collision_base:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0791636, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.55701, 2.09601 ), Vector2( -1.55701, 2.09601 ), Vector2( -1.55701, 2.09601 ) ]
}

[sub_resource type="CanvasItemMaterial" id=24]
resource_local_to_scene = true
render_priority = 6
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=25]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 153.84
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 19.66
linear_accel_random = 1.0
angle = 1.0
scale = 0.02
color = Color( 1, 0, 0, 1 )
hue_variation = -1.0

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ -36.0 ]
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 327684, 1, 0, 327685, 1, 2, 327687, 1, 4, 327688, 1, 1, 327689, 1, 1, 327690, 1, 1, 327691, 1, 5, 327694, 1, 0, 327695, 1, 1, 327696, 1, 1, 327697, 1, 5, 393220, 1, 131072, 393221, 1, 131074, 393223, 1, 65536, 393224, 1, 65537, 393225, 1, 65537, 393226, 1, 65537, 393227, 1, 65538, 393230, 1, 65540, 393231, 1, 131073, 393232, 1, 131073, 393233, 1, 131074, 458759, 1, 65536, 458760, 1, 65537, 458761, 1, 65537, 458762, 1, 65537, 458763, 1, 65538, 524295, 1, 131072, 524296, 1, 131073, 524297, 1, 131073, 524298, 1, 131073, 524299, 1, 65541, 524302, 1, 0, 524303, 1, 5, 524306, 1, 524288, 589838, 1, 65540, 589839, 1, 65541, 589842, 1, 589824, 655365, 1, 524288, 655378, 1, 589824, 720901, 1, 589824, 720914, 1, 589824, 786437, 1, 589824, 786447, 1, 524288, 786450, 1, 589824, 786453, 1, 524288, 851973, 1, 589824, 851982, 1, 786432, 851983, 1, 851978, 851984, 1, 786433, 851985, 1, 786433, 851986, 1, 851978, 851987, 1, 786433, 851988, 1, 786433, 851989, 1, 851978, 851990, 1, 786434, 917506, 1, 786432, 917507, 1, 786433, 917508, 1, 786433, 917509, 1, 983050, 917510, 1, 786433, 917511, 1, 786433, 917512, 1, 786434, 917519, 1, 655360, 917522, 1, 655360, 917525, 1, 655360 )

[node name="Ninja_frog2" type="KinematicBody2D" parent="."]
position = Vector2( 503, -39 )
collision_layer = 4
collision_mask = 15
collision/safe_margin = 1.0
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Ninja_frog2"]
material = SubResource( 18 )
position = Vector2( -4, -5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 12

[node name="collision_base" type="CollisionShape2D" parent="Ninja_frog2"]
position = Vector2( -1.55713, 2.26511 )
shape = SubResource( 19 )

[node name="Camera2D" type="Camera2D" parent="Ninja_frog2"]
current = true
limit_left = 7
limit_top = -595
limit_right = 5025
limit_bottom = 596
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 9.98
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="anim" type="AnimationPlayer" parent="Ninja_frog2"]
reset_on_save = false
method_call_mode = 1
anims/RESET = SubResource( 20 )
anims/idle = SubResource( 21 )
anims/idlea = SubResource( 22 )
anims/run = SubResource( 23 )

[node name="particles" type="Particles2D" parent="Ninja_frog2"]
process_priority = 3
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 24 )
use_parent_material = true
scale = Vector2( 3, 3 )
z_index = 7
emitting = false
amount = 31
lifetime = 0.3
one_shot = true
randomness = 0.1
draw_order = 1
process_material = SubResource( 25 )
texture = ExtResource( 4 )

[node name="shoot_point" type="Position2D" parent="Ninja_frog2"]
position = Vector2( 42, 16 )

[node name="cool_dewn_delay" type="Timer" parent="Ninja_frog2"]
wait_time = 0.4

[node name="gun" type="Sprite" parent="Ninja_frog2"]
position = Vector2( 16, 18 )
scale = Vector2( 1.32, 0.879995 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 76, 87, 35, 21 )
